trying to resolve scrollbar being shown

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -98,7 +98,7 @@
 			} //div#user-info
 			div#notification-updates {
 				width: 275px;
-				overflow-x: scroll; 
+				overflow-x: auto;
 				margin: 10px auto;
 				height: auto;
 				font-weight: 300;
